[package]
name = "activitystreams"
description = "Activity Streams in Rust"
version = "0.1.0"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/activitystreams"
keywords = ["activitystreams", "activitypub"]

[dependencies]
activitystreams-traits = { version = "0.1", path = "activitystreams-traits" }
activitystreams-types = { version = "0.1", path = "activitystreams-types" }

[workspace]
members = [
    "activitystreams-derive",
    "activitystreams-traits",
    "activitystreams-types",
]
