[package]
name = "activitystreams"
description = "Activity Streams in Rust"
version = "0.2.1"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.cloud/activitystreams.git"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]

[dependencies]
activitystreams-traits = { version = "0.1", path = "activitystreams-traits" }
activitystreams-types = { version = "0.2", path = "activitystreams-types" }

[dev-dependencies]
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
activitystreams-derive = { version = "0.1", path = "activitystreams-derive" }

[workspace]
members = [
    "activitystreams-derive",
    "activitystreams-traits",
    "activitystreams-types",
]
