[package]
name = "activitystreams-derive"
description = "Derive macros for activitystreams"
version = "0.1.0"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/activitystreams"
keywords = ["activitystreams", "activitypub"]

[dependencies]
quote = "0.5"
syn = "0.13"
proc-macro2 = "0.3"

[dev-dependencies]
activitystreams-traits = { version = "0.1", path = "../activitystreams-traits" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
proc-macro = true
