[package]
name = "activitystreams-traits"
description = "Traits for ActivityStreams objects"
version = "0.1.0"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/activitystreams"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]

[dependencies]
failure = "0.1"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0"
