[package]
name = "activitystreams-types"
description = "Base types from the Activity Streams spec"
version = "0.1.0"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/activitystreams"
keywords = ["activitystreams", "activitypub"]

[dependencies]
activitystreams-derive = { version = "0.1", path = "../activitystreams-derive" }
activitystreams-traits = { version = "0.1", path = "../activitystreams-traits" }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
