[package]
name = "activitystreams-types"
description = "Base types from the Activity Streams spec"
version = "0.2.1"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.cloud/asonix/activitystreams.git"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]

[dependencies]
activitystreams-derive = { version = "0.1", path = "../activitystreams-derive" }
activitystreams-traits = { version = "0.1", path = "../activitystreams-traits" }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
failure = "0.1"
